--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,3 +5,6 @@
 <div id="page">
   <router-outlet></router-outlet>
 </div>
+<a id="menu-toggle" class="material-icons" (click)="toggleMenu()">
+  list
+</a>
