--- a/frontend/src/app/_component/log-list/log-list.component.html
+++ b/frontend/src/app/_component/log-list/log-list.component.html
@@ -1,4 +1,23 @@
-<div class="log-title" [title]="file">{{file}}</div>
-<ul class="log-content" (scroll)="scrollList($event)" (resize)="resizeList($event)" #logList>
+<div class="log-title" [title]="file?.name">
+  {{file?.name}}
+  <ng-container *ngIf="file?.name && file?.size">
+    , {{file?.rows? file?.rows + ' rows': 'indexing'}}, {{file?.size|fileSize}}
+  </ng-container>
+</div>
+<div class="log-content-container">
+  <svg class="log-content" [attr.height]="16 + 19 * content.length" (scroll)="scrollList($event)" (resize)="resizeList($event)" #logList>
+    <style>
+      .log-content-item {
+        font-family: 'Andale Mono', Consolas, 'Courier New', serif;
+        font-size: 13px;
+        fill: #BED6FF;
+      }
+    </style>
+    <text class="log-content-item"
+          *ngFor="let row of content; let i = index"
+          [attr.y]="16 + i * 19">{{row}}</text>
+  </svg>
+</div>
+<!--<ul class="log-content" (scroll)="scrollList($event)" (resize)="resizeList($event)" #logList>
   <li *ngFor="let row of content;">{{row}}</li>
-</ul>
+</ul>-->
