--- a/frontend/src/app/_component/log-list/log-list.component.scss
+++ b/frontend/src/app/_component/log-list/log-list.component.scss
@@ -19,22 +19,31 @@
 
   }
 
-  .log-content {
+
+  .log-content-container {
+
     display: block;
     overflow: auto;
     height: 100%;
     width: 100%;
-    list-style: none;
-    padding: 0.5rem 1rem;
-
-    font-size: 13px;
-
-    background-color: #2B2B2B;
-    color: #BED6FF;
-
-    li {
+    .log-content {
+      min-height: 100%;
+      min-width: 100%;
       width: auto;
-      white-space: nowrap;
+
+      list-style: none;
+      padding: 0.5rem 1rem;
+
+      font-size: 13px;
+
+      background-color: #2B2B2B;
+
+      .log-content-item {
+        //color: ;
+
+        width: auto;
+        white-space: pre;
+      }
     }
   }
 
